// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GitHub Repository Renderer falls back to updatedAt when pushedAt is not available 1`] = `
<div
  className="css-1kbinjp"
>
  <h4
    className="css-cpvk2h"
  >
    themeuser/legacy-repo
  </h4>
  <span
    className="css-gulexy"
  >
    Legacy repository without pushedAt field.
  </span>
  <div
    className="css-1c6hy0j"
  >
    <span>
      Last updated 
      6 years ago
    </span>
    <span>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-up-right-from-square fa-xs"
        data-icon="up-right-from-square"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`GitHub Repository Renderer matches the snapshot 1`] = `
<div
  className="css-1kbinjp"
>
  <h4
    className="css-cpvk2h"
  >
    themeuser/gatsby-theme-chronogrove
  </h4>
  <span
    className="css-gulexy"
  >
    GatsbyJS blog theme with built-in social widgets for creatives and developers.
  </span>
  <div
    className="css-1c6hy0j"
  >
    <span>
      Last updated 
      last year
    </span>
    <span>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-up-right-from-square fa-xs"
        data-icon="up-right-from-square"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;
